[FIX] 개인프로필-개별정보,기업프로필-기업정보 공개여부 상세 설정 (#195)
* 공개여부 필요없는 부분 제거

* 모호한 메서드명 변경

* 개인 프로필 개별정보 공개여부 세부 설정

* 기업 프로필 개별정보 공개여부 세부 설정